language-server/src/tests/snapshots/gleam_language_server__tests__action__convert_to_pipe_with_comparison_adds_braces.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main() {\n  wibble(1.0 >=. 0.0, waa)\n}\n"
---
----- BEFORE ACTION

pub fn main() {
  wibble(1.0 >=. 0.0, waa)
  ↑                       
}


----- AFTER ACTION

pub fn main() {
  { 1.0 >=. 0.0 } |> wibble(waa)
}
