language-server/src/tests/snapshots/gleam_language_server__tests__action__convert_to_pipe_with_complex_binop_adds_braces.snap
---
source: language-server/src/tests/action.rs
expression: "\nfn bug() {\n    bool.guard(1 == 2 || 2 == 3, Nil, fn() { Nil })\n}\n"
---
----- BEFORE ACTION

fn bug() {
    bool.guard(1 == 2 || 2 == 3, Nil, fn() { Nil })
                      ↑                            
}


----- AFTER ACTION

fn bug() {
    { 1 == 2 || 2 == 3 } |> bool.guard(Nil, fn() { Nil })
}
