language-server/src/tests/snapshots/gleam_language_server__tests__action__convert_to_pipe_with_function_call_on_second_argument.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main() {\n  wibble(wobble, woo)\n}\n"
---
----- BEFORE ACTION

pub fn main() {
  wibble(wobble, woo)
                 ↑   
}


----- AFTER ACTION

pub fn main() {
  woo |> wibble(wobble, _)
}
