language-server/src/tests/snapshots/gleam_language_server__tests__action__convert_to_pipe_with_function_call_with_labelled_arguments_inserts_hole_2.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main() {\n  wibble(wobble: 1, woo: 2)\n}\n"
---
----- BEFORE ACTION

pub fn main() {
  wibble(wobble: 1, woo: 2)
                    ↑      
}


----- AFTER ACTION

pub fn main() {
  2 |> wibble(wobble: 1, woo: _)
}
